tests/errors/surf_cls_09.experr
name 'self' is not defined
